# blockify

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
blockify/: __init__.py  blocklist.py  cli.py  dbusclient.py  gui.py  muters.py  util.py
blockify/data/: blockify.service  example_blockify.ini
