[tool.poetry]
name = "blockify"
version = "3.6.3"
description = "Mute spotify advertisements"
authors = ["Max Falk <gmdfalk@gmail.com>", "Carlo Castoldi <carlo.castoldi@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
blockify = "blockify.cli:main"
blockify-dbus = "blockify.dbusclient:main"
blockify-ui = "blockify.gui:main"

[tool.poetry.dependencies]
python = "^3.12"
dbus-python = "^1.3.2"

[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
pygobject = "^3.48.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
