[tool.poetry]
name = "blockify"
version = "3.6.3"
description = "Mute spotify advertisements"
authors = ["Max Falk <gmdfalk@gmail.com>", "Carlo Castoldi <carlo.castoldi@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
blockify = "blockify.cli:main"
blockify-dbus = "blockify.dbusclient:main"

[tool.poetry.dependencies]
python = "^3.12"
dbus-python = "^1.3.2"
docopt = "^0.6.2"
pygobject = "^3.50.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
