[project]
name = "blockify"
version = "4.0.0"
description = "Mute spotify advertisements"
repository = "https://github.com/carlocastoldi/blockify"
authors = [
    {name = "Max Falk",       email = "gmdfalk@gmail.com"},
    {name = "Carlo Castoldi", email = "carlo.castoldi@outlook.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
packages = [{include = "blockify"}]
dependencies = [
    "dbus-python (>=1.3.2,<2.0.0)",
    "docopt (>=0.6.2,<1.0.0)",
    "pygobject (>=3.50.0,<4.0.0)",
]

[project.scripts]
blockify = "blockify.cli:main"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
